Use virtual thread pool